<resources>
    <string name="app_name">handsign_translator_app</string>

    <!-- Navigation Fragment Labels -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Navigation Buttons -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Dark Mode -->
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>

    <!-- Language Selection -->
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>

    <string name="gesture_options_title">Gesture Options</string>
    <string name="reset_all_to_default">Reset All to Default</string>
    <string name="reset_current_gesture">Reset Current Gesture</string>
    <string name="reset_all_gestures_title">Reset All Gestures</string>
    <string name="reset_all_gestures_message">Are you sure you want to reset all gestures to their original meanings?</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="gesture_reset_success">All gestures reset to default</string>
    <string name="edit_gesture_title">Edit Gesture Meaning</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="Three">Three</string>
    <string name="English">English\n</string>
    <string name="Hand_Signs">Hand Signs</string>
    <string name="Signs">Hand Signs</string>
    <string name="Translate">Translate</string>
    <string name="no_device_connected">No device connected...</string>
    <string name="CustomGesture">"Customer Gesture "</string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="Mute">Mute/Unmute</string>
    <string name="Bluetooth_devices">Bluetooth devices</string>
    <string name="Paired_devices">Paired Devices</string>
    <string name="Available_devices">Available Devices</string>
    <string name="Discover">Discover</string>
    <string name="Test_BT">Test_BT</string>

    <string name="gestures_title">Gestures</string>
    <string name="settings_title">Settings</string>
    <string name="translation_title">Translation</string>

    <string name="enter_new_meaning">Enter new meaning</string>

    <!-- Demo Paragraph (Placeholder) -->

</resources>
